--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -58,8 +58,19 @@ jobs:
 
         gcloud auth configure-docker gcr.io
 
-    # Build the Docker image
-    - name: Build
+    - name: Build sonarqube
+      run: |-
+        docker build .\
+          --file /home/runner/work/GKE/GKE/sonarqube/Dockerfile \
+          --tag "europe-west2-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:latest" \
+          --build-arg GITHUB_SHA="$GITHUB_SHA" \
+          --build-arg GITHUB_REF="$GITHUB_REF" \
+
+        docker push "europe-west2-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:latest"
+        
+        docker image ls
+          
+    - name: build nginx
       run: |-
         docker build .\
           --file /home/runner/work/GKE/GKE/gkeapp/Dockerfile \
@@ -67,22 +78,9 @@ jobs:
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
         
-        docker build .\
-          --file /home/runner/work/GKE/GKE/sonarqube/Dockerfile \
-          --tag "europe-west2-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:latest" \
-          --build-arg GITHUB_SHA="$GITHUB_SHA" \
-          --build-arg GITHUB_REF="$GITHUB_REF" \
-        
-        docker image ls
-          
-    # Push the Docker image to Google Artifact Registry
-    - name: Publish
-      run: |-
-        docker image ls
-        
-        docker push "europe-west2-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:latest"
-
         docker push "europe-west2-docker.pkg.dev/$PROJECT_ID/nginx/stateless:latest"
+
+        docker image ls
 
     # Get the GKE credentials so we can deploy to the cluster
     - name: Set up GKE credentials
