--- a/gkeapp/Dockerfile
+++ b/gkeapp/Dockerfile
@@ -1,4 +1,11 @@
-FROM ghcr.io/laniksj/docker-php-alpine:master
+FROM ruby:2
 
-# Copy Test Page
-COPY html/ /var/www/html
+RUN apt-get update && \
+    apt-get install -y net-tools
+
+COPY /app/Gemfile /app/Gemfile
+RUN cd /app; bundle install
+COPY /app/app.rb /app/app.rb
+
+EXPOSE 8080
+CMD ["ruby", "/app/app.rb"]
