--- a/gkeapp/manifests.yaml
+++ b/gkeapp/manifests.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: webapp
-          image: europe-west2-docker.pkg.dev/lofty-object-378217/webapp/stateless:latest #quay.io/fairwinds/k8s-workshop:latest
+          image: europe-west2-docker.pkg.dev/lofty-object-378217/web-app/stateless:latest #quay.io/fairwinds/k8s-workshop:latest
           command: ["ruby", "app/app.rb"]
           ports:
           - containerPort: 8080
@@ -48,8 +48,8 @@ spec:
   ports:
     - name: http
       protocol: TCP
-      port:
-      targetPort:
+      port: 8080
+      targetPort: 8080
   selector:
     app: webapp
 ---
