--- a/gkeapp/manifests.yaml
+++ b/gkeapp/manifests.yaml
@@ -53,3 +53,49 @@ spec:
   selector:
     app: webapp
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: webapp-service
+  namespace: webapp
+  labels:
+    app: webapp
+spec:
+  selector:
+    app: webapp
+  ports:
+    - protocol: TCP
+      port: 8080
+  type: NodePort
+---
+apiVersion: networking.gke.io/v1
+kind: ManagedCertificate
+metadata:
+  name: webapp-cert
+  namespace: webapp
+spec:
+  domains:
+    - webapp.d-e-l-o.com
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: webapp-ingress
+  namespace: webapp
+  annotations:
+    kubernetes.io/ingress.class: "gce"
+    kubernetes.io/ingress.global-static-ip-name: "web-address"
+    networking.gke.io/managed-certificates: "webapp-cert"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+spec:
+  rules:
+  - host: webapp.d-e-l-o.com
+    http:
+      paths:
+      - path: /*
+        pathType: ImplementationSpecific
+        backend:
+          service:
+            name: webapp-service
+            port: 
+              number: 8080
