--- a/sonarqube/manifests.yaml
+++ b/sonarqube/manifests.yaml
@@ -138,16 +138,15 @@ spec:
             name: sqservice
             port: 
               number: 9000
-  - host: sonarqube.d-e-l-o.com
-    https:
-      paths:
-      - path: /*
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: sqservice
-            port: 
-              number: 9000
+#    https:
+#      paths:
+#      - path: /*
+#        pathType: ImplementationSpecific
+#        backend:
+#          service:
+#            name: sqservice
+#            port: 
+#              number: 9000
 ---
 apiVersion: v1
 kind: Service
